<!--
  ~ Copyright (C) 2015-2017 Level Software LLC.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Keyculator</string>

    <string name="key_zero" translatable="false">0</string>
    <string name="key_one" translatable="false">1</string>
    <string name="key_two" translatable="false">2</string>
    <string name="key_three" translatable="false">3</string>
    <string name="key_four" translatable="false">4</string>
    <string name="key_five" translatable="false">5</string>
    <string name="key_six" translatable="false">6</string>
    <string name="key_seven" translatable="false">7</string>
    <string name="key_eight" translatable="false">8</string>
    <string name="key_nine" translatable="false">9</string>

    <string name="key_decimal" translatable="false">.</string>
    <string name="key_addition" translatable="false">+</string>
    <string name="key_subtraction" translatable="false">−</string>
    <string name="key_multiplication" translatable="false">×</string>
    <string name="key_division" translatable="false">÷</string>
    <string name="key_equals" translatable="false">=</string>

    <string name="key_next" translatable="false">→</string>
    <string name="key_close" translatable="false">↓</string>
    <string name="key_prev" translatable="false">←</string>

    <string name="key_backspace">Backspace</string>
    <string name="key_clear">Clear</string>
</resources>
