<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015-2017 Level Software LLC.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/keyboard_top_margin"
        app:cardElevation="@dimen/keyboard_elevation"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:cardElevation="@dimen/screen_elevation"
                app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/screen_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/screen"
                    style="@style/BaseTextAppearance.Screen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:maxLines="1"
                    android:ellipsize="middle"
                    tools:text="1,324 + 57"/>

                <ImageView
                    android:id="@+id/backspace"
                    android:layout_width="@dimen/operator_bar_width"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_backspace_black_24dp"
                    android:contentDescription="@string/key_backspace"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/number_text"
                    android:layout_marginBottom="1dp"
                    android:clickable="true"/>

            </LinearLayout>

            </android.support.v7.widget.CardView>


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:theme="@style/NumberButtonTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/number_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/seven"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_seven"/>

                        <TextView
                            android:id="@+id/eight"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_eight"/>

                        <TextView
                            android:id="@+id/nine"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_nine"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/four"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_four"/>

                        <TextView
                            android:id="@+id/five"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_five"/>

                        <TextView
                            android:id="@+id/six"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_six"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/one"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_one"/>

                        <TextView
                            android:id="@+id/two"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_two"/>

                        <TextView
                            android:id="@+id/three"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_three"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/zero"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_zero"/>

                        <TextView
                            android:id="@+id/decimal"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_decimal"/>

                        <TextView
                            android:id="@+id/equals"
                            style="@style/BaseTextAppearance.Button.Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/key_equals"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/operator_bar_width"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/operator_background">

                    <TextView
                        android:id="@+id/division"
                        style="@style/BaseTextAppearance.Button.Operator"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/key_division"/>

                    <TextView
                        android:id="@+id/multiplication"
                        style="@style/BaseTextAppearance.Button.Operator"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/key_multiplication"/>

                    <TextView
                        android:id="@+id/subtraction"
                        style="@style/BaseTextAppearance.Button.Operator"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/key_subtraction"/>

                    <TextView
                        android:id="@+id/addition"
                        style="@style/BaseTextAppearance.Button.Operator"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/key_addition"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</merge>